@@ -24,6 +24,16 @@ struct objc_class {
                                                 The sum of the class 
 						definition and all super 
 						class definitions. */
+#ifdef _WIN64
+  /* We pad the structure manually to prevent warning when -Wpadded
+     is used.  The compiler automatically pads the structures that it
+     generates, so this manually padded structure still matches the one
+     generated by the compiler, but if we don't pad manually, -Wpadded
+     detects that padding is being added and generates annoying warnings.
+     This hack is necessary as on LLP64 targets sizeof (long) isn't equal
+     to sizeof (void *).  */
+  long pad;
+#endif
   struct objc_ivar_list* ivars;               /* Pointer to a structure that
                                                 describes the instance 
                                                 variables in the class
@@ -42,3 +52,4 @@ struct objc_class {
   struct objc_protocol_list *protocols;	      /* Protocols conformed to */
   void* gc_object_type;
 };
+
